WIP v2 code refactor

--- a/index_v2.html
+++ b/index_v2.html
@@ -4,7 +4,7 @@
 <head>
     <title>Whack-A-Mole!</title>
     <link rel="stylesheet" href="style.css">
-    <script src="app.js" defer></script>
+   
 </head>
 
 <body>
@@ -25,6 +25,7 @@
     <div id="buttons">
         <button id="start">START</button>
         <button id="stop" disabled>STOP</button>
+        <button id="restart" disabled>RESET</button>
     </div>
     
     
@@ -34,5 +35,7 @@
     </div>
 
 </body>
+
+<script src="app_v2.js"></script>
 
 </html>
